[gd_scene load_steps=11 format=3 uid="uid://defaddk4gssm0"]

[ext_resource type="Texture2D" uid="uid://c4u7rputwpeom" path="res://art/playerGrey_up1.png" id="1_ri4pi"]
[ext_resource type="Script" path="res://Player/player.gd" id="1_sjnjd"]
[ext_resource type="Texture2D" uid="uid://bhgerjhsok0wg" path="res://art/playerGrey_up2.png" id="2_fke73"]
[ext_resource type="Texture2D" uid="uid://bodgtlrby7j56" path="res://art/playerGrey_walk1.png" id="3_c8vx8"]
[ext_resource type="Texture2D" uid="uid://d37syea774uxx" path="res://art/playerGrey_walk2.png" id="4_8d3w1"]

[sub_resource type="SpriteFrames" id="SpriteFrames_b7a11"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ri4pi")
}, {
"duration": 1.0,
"texture": ExtResource("2_fke73")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_c8vx8")
}, {
"duration": 1.0,
"texture": ExtResource("4_8d3w1")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_280lc"]
radius = 27.0
height = 68.0

[sub_resource type="Animation" id="Animation_b0j2d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xnqu5"]
resource_name = "take_damage"
length = 0.12
loop_mode = 1
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0.501961), Color(1, 1, 1, 1), Color(1, 1, 1, 0.501961), Color(1, 1, 1, 1), Color(1, 1, 1, 0.501961), Color(1, 1, 1, 1), Color(1, 1, 1, 0.501961)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rqqyt"]
_data = {
"RESET": SubResource("Animation_b0j2d"),
"take_damage": SubResource("Animation_xnqu5")
}

[node name="Player" type="Area2D"]
script = ExtResource("1_sjnjd")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_b7a11")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_280lc")

[node name="TakingDamageAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rqqyt")
}

[node name="AnimationTimer" type="Timer" parent="."]

[connection signal="death" from="." to="." method="_on_death"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
